<resources>
    <string name="app_name">Beever</string>
    <string name="sign_up_header">Sign Up</string>
    <string name="log_in_header">Log in</string>
    <string name="sign_up_text"><u>Sign up</u></string>
    <string name="log_in_text"><u>Log in</u></string>
    <string name="splash_name">beever</string>
    <string name="splash_slogan">Be the best version of yourself!</string>
    <string name="login_button">Login</string>
    <string name="submit_button">Submit</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="account_creation_prompt">"Don't have an account?"</string>
    <string name="account_exists_prompt">"Already have an account?"</string>
    <string name="email_hint">Email</string>
    <string name="full_name_hint">Full Name</string>
    <string name="update_button">Update</string>
    <string name="function_1">Calendar Function</string>
    <string name="skip_button">Skip</string>
    <string name="function_1_text_1">Efficiency</string>
    <string name="function_1_text_2">Efficacy</string>
    <string name="function_1_text_3">Never miss an important meeting again!</string>
    <string name="function_2">Groups Function</string>
    <string name="function_2_text_1">Creative</string>
    <string name="function_2_text_2">Collaborative</string>
    <string name="function_2_text_3">Be more creative together and achieve greater heights!</string>
    <string name="function_3">To-do List Function</string>
    <string name="function_3_text_1">On Time</string>
    <string name="function_3_text_2">On The Ball</string>
    <string name="function_3_text_3">Never forget your deadlines again! With this app, all your schoolwork will be synced automatically!</string>
    <string name="go_to_login_activity">Go to login activity</string>
    <string name="signout_button">Sign Out</string>
    <string name="to_onboarding">Go to onBoarding screens</string>
    <string name="profile_image">Profile Image</string>
    <string name="to_do_splash">To Do List Splash</string>
    <string name="group_splash">Group Splash</string>
    <string name="calendar_splash">Calendar Splash</string>
    <string name="logo">Logo</string>
    <string name="splash_background">Splash Background</string>
    <string name="splash_logo">Splash Logo</string>
    <string name="sign_in_logo">Sign In Logo</string>
    <string name="greetings_morning">Good Morning,</string>
    <string name="greetings_afternoon">Good Afternoon,</string>
    <string name="greetings_evening">Good Evening,</string>
    <string name="name">Claudia.</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="upcoming_meeting">UPCOMING MEETING</string>
    <string name="jump_to_group">Jump to Group...</string>
    <string name="group_fragment">Groups</string>
    <string name="chat_hint">Type a message&#8230;</string>
    <string name="chat_info_grp_info">Group Information</string>
    <string name="chat_info_media">Media</string>
    <string name="chat_info_files">Files</string>
    <string name="chat_info_links">Links</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to_do">To-Do</string>
    <string name="project">Project:</string>
    <string name="archived">Archived</string>
    <string name="email_address_hint">Email Address</string>
    <string name="add_a_to_do">Add a To-Do</string>
    <string name="task">Task</string>
    <string name="add_due_date">Due Date</string>
    <string name="edit_to_do">Edit To-Do</string>
    <string name="group_name_selection">Group name</string>
    <string name="create_group">Create group</string>
    <string name="add_users">Add Users</string>
    <string name="currently_added">Currently Added:</string>
    <string name="add_user">Add User</string>
    <string name="confirm_users">confirm</string>
    <string name="enter_your_preferred_timing">Enter your preferred timing</string>
    <string name="search">Search</string>
    <string name="preferred_time">Preferred Time</string>
    <string name="preferred_date">Preferred Date</string>
    <string name="current_preferred_time">Current preferred time:</string>
    <string name="result">Result:</string>
    <string name="enter_the_duration_of_your_meeting">Enter the duration of your meeting</string>
    <string name="duration_of_meeting">Duration of meeting (min)</string>
    <string name="event_name">Event Name</string>
    <string name="description">Description</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="due_date">Due Date</string>
    <string name="assigned_to">Assigned To</string>
    <string name="task_name">Task Name</string>
    <string name="deadline">deadline</string>
    <string name="assigned_to1">assigned to</string>
    <string name="add_event">Add Event</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="start">START</string>
    <string name="End">END</string>
    <string name="date">SET DATE</string>
    <string name="time">SET TIME</string>
    <string name="delete_group">Delete Group</string>
    <string name="you_have_no_groups">You have no groups!</string>
    <string name="no_upcoming_events">No upcoming events!</string>
    <string name="no_favourite_groups">No favourite groups!</string>
    <string name="no_to_dos">You have no To Dos!</string>
    <string name="no_events_today">No events today</string>
</resources>