<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg_01"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingTop="50dp"
    android:paddingRight="50dp"
    tools:context=".admin.Login">



    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/beever_logo"
        android:transitionName="logo_image"
        android:contentDescription="@string/sign_in_logo" />

    <TextView
        android:id="@+id/logo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/log_in_header"
        android:textSize="20sp"
        android:transitionName="logo_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:transitionName="user_tran" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            app:passwordToggleEnabled="true"
            android:transitionName="password_tran" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgot_password"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:elevation="0dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/circular_border_shape"
            android:text="@string/login_button"
            android:textColor="@color/white"
            app:spinning_bar_width="4dp"
            app:spinning_bar_color="#FFF"
            app:spinning_bar_padding="6dp"
            app:initialCornerAngle="1000dp"
            app:finalCornerAngle="1000dp"/>

        <TextView
            android:id="@+id/sign_up_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/poppins"
            android:text="@string/account_creation_prompt"
            android:textSize="12sp"
            android:transitionName="sign_up_text_tran"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="-10dp"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_light"
            android:text="@string/sign_up_text"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:transitionName="sign_up_tran" />

    </LinearLayout>

</LinearLayout>