<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_marginBottom="100dp"
    android:background="@color/white"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/add_event_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_event"
            android:paddingTop="16dp"
            android:paddingBottom="4dp"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/eventTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:textSize="30sp"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="16dp"
            android:inputType="text"
            android:fontFamily="@font/poppins"/>

        <LinearLayout
            android:id="@+id/startEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start"
                android:textSize="20sp"
                android:fontFamily="@font/poppins"/>

            <TextView
                android:id="@+id/start_datetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/dateTime"
                android:textSize="20sp"
                android:fontFamily="@font/poppins"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/endEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/End"
                android:textSize="20sp"
                android:fontFamily="@font/poppins"/>

            <TextView
                android:id="@+id/end_datetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/dateTime"
                android:textSize="20sp"
                android:fontFamily="@font/poppins"/>

        </LinearLayout>

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/description"
            android:layout_gravity="start"
            android:textSize="20sp"
            android:fontFamily="@font/poppins"
            />


        <LinearLayout
            android:id="@+id/add_event_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:text="@string/cancel"
                android:backgroundTint="@color/white"
                android:textColor="@color/beever_dark_blue"
                android:fontFamily="@font/poppins"
                />

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:text="@string/save"
                android:fontFamily="@font/poppins"
                android:backgroundTint="@color/white"
                android:textColor="@color/beever_dark_blue"/>


        </LinearLayout>



    </LinearLayout>
</ScrollView>