<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="36dp"
    android:layout_marginEnd="36dp"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:layout_margin="8dp"
            android:text="@string/task_name"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/beever_pink"
            android:drawablePadding="4dp"
            app:drawableLeftCompat="@drawable/ic_outline_description_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toDoFullTaskTitle"
            android:fontFamily="@font/poppins"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            android:textColor="@color/beever_blue"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:layout_margin="8dp"
            android:text="@string/assigned_to"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/beever_pink"
            android:drawablePadding="4dp"
            app:drawableLeftCompat="@drawable/ic_outline_how_to_reg_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toDoFullTaskAssignedTo"
            android:fontFamily="@font/poppins"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            android:textColor="@color/beever_blue"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:layout_margin="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/due_date"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/beever_pink"
            android:drawablePadding="4dp"
            app:drawableLeftCompat="@drawable/ic_outline_calendar_today_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toDoFullTaskDueDate"
            android:fontFamily="@font/poppins"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            android:textColor="@color/beever_blue"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/description"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/beever_pink"
            android:drawablePadding="4dp"
            app:drawableLeftCompat="@drawable/ic_outline_description_24"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toDoFullTaskDescr"
                android:fontFamily="@font/poppins"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="16sp"
                android:textColor="@color/beever_blue"/>
        </ScrollView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/toDoFullBackBtn"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="36dp"
            android:text="@string/back" />

        <Button
            android:id="@+id/toDoFullDeleteBtn"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="36dp"
            android:text="@string/delete" />

    </LinearLayout>

</LinearLayout>